# dynabuf

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
src/dynabuf/: __init__.py  hello.py
src/dynabuf/cli/: cli.py
src/dynabuf/examples/simple_proto_file/: Makefile  README.md  buf.gen.yaml  buf.yaml
src/dynabuf/examples/simple_proto_file/src/: addressbook.proto
