[project]
name = "dynabuf"
version = "0.1.0"
description = "Library to dynamically create, update, and use protobuf messages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "protobuf>=5.27",
]

[project.scripts]
dynabuf = "dynabuf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"